WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49253
[Qt][WK2] ASSERT fail in fast/frames/lots-of-objects.html
https://bugs.webkit.org/show_bug.cgi?id=49253
Summary
[Qt][WK2] ASSERT fail in fast/frames/lots-of-objects.html
Balazs Kelemen
Reported
2010-11-09 07:26:00 PST
> WebKitBuild/Debug/bin/WebKitTestRunner LayoutTests/ast/frames/lots-of-objects.html
ASSERTION FAILED: attached (../../../WebKit2/Platform/qt/SharedMemoryQt.cpp:131 static WTF::PassRefPtr<WebKit::SharedMemory> WebKit::SharedMemory::create(const WebKit::SharedMemory::Handle&, WebKit::SharedMemory::Protection)) We should remove the assert and handle the case when the attach is unsuccessful. This can happen when the process that created the shared memory has been already detached from that when we are attaching. In the test, the VisitedLinkProvider creates a new table, send the SetVisitedLinkTable message to the web process, and a bit later WTR terminates and detaches from the shared memory. When the web process sees the message then the shared memory has been already released so it is not attachable.
Attachments
Patch
(1.61 KB, patch)
2010-11-09 07:34 PST
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2010-11-09 07:34:57 PST
Created
attachment 73377
[details]
Patch
Balazs Kelemen
Comment 2
2010-11-09 08:51:07 PST
Comment on
attachment 73377
[details]
Patch Clearing flags on attachment: 73377 Committed
r71638
: <
http://trac.webkit.org/changeset/71638
>
Balazs Kelemen
Comment 3
2010-11-09 08:51:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug