2010-11-09  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Csaba Osztrogonác.

        [Qt][WK2] ASSERT fail in fast/frames/lots-of-objects.html
        https://bugs.webkit.org/show_bug.cgi?id=49253

        * Platform/qt/SharedMemoryQt.cpp:
        (WebKit::SharedMemory::create): Do not assert
        when the attach was unsuccessful but return with 0.

Canonical link: https://commits.webkit.org/62125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71638 268f45cc-cd09-0410-ab3c-d52691b4dbfc